--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <script>
     //fetch('/produtos/destaques')
-    fetch('https://lucorcelli.github.dev-3000.app.github.dev/produtos/destaques')
+    fetch('https://fotoload-api.onrender.com/produtos/destaques')
       .then(res => res.json())
       .then(produtos => {
         const grid = document.getElementById('destaques');
