--- a/cadastro-produto.html
+++ b/cadastro-produto.html
@@ -2,119 +2,108 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8" />
-  <title>📦 Cadastrar Produto</title>
+  <title>📦 Cadastro de Produto com Fotos</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #eef2f7;
+      font-family: sans-serif;
+      background: #f2f5fa;
       padding: 20px;
-      max-width: 600px;
+      max-width: 800px;
       margin: auto;
     }
     h1 {
       text-align: center;
-      color: #333;
+      margin-bottom: 20px;
     }
     form {
-      background: white;
+      background: #fff;
       padding: 20px;
       border-radius: 8px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     label {
-      display: block;
-      margin-top: 10px;
       font-weight: bold;
+      margin-top: 10px;
+      display: block;
     }
-    input, textarea {
+    input, textarea, select {
       width: 100%;
       padding: 8px;
       margin-top: 4px;
       border-radius: 4px;
       border: 1px solid #ccc;
     }
+    .foto-campo {
+      margin-top: 16px;
+      border-top: 1px solid #ddd;
+      padding-top: 16px;
+    }
+    img.preview {
+      max-width: 150px;
+      margin-top: 8px;
+      border-radius: 6px;
+    }
     button {
       margin-top: 20px;
-      padding: 10px 20px;
-      background: #28a745;
+      padding: 12px;
+      background: #007bff;
       color: white;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
       cursor: pointer;
+      font-size: 16px;
     }
     .msg {
-      margin-top: 15px;
       text-align: center;
+      margin-top: 15px;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1>📦 Cadastrar Produto</h1>
-  <form onsubmit="enviarProduto(event)">
-    <label for="nome">Nome:</label>
+  <h1>📦 Cadastro de Produto com Fotos</h1>
+  <form id="cadastroForm">
+
+    <!-- Dados do produto -->
+    <label>Nome:</label>
     <input type="text" id="nome" required />
 
-    <label for="descricao">Descrição:</label>
+    <label>Descrição:</label>
     <textarea id="descricao" rows="3" required></textarea>
 
-    <label for="referencia">Referência de Fábrica:</label>
+    <label>Referência de Fábrica:</label>
     <input type="text" id="referencia" />
 
-    <label for="codigo">Código de Barras:</label>
+    <label>Código de Barras:</label>
     <input type="text" id="codigo" />
 
-    <label for="usuario_id">ID do Usuário:</label>
+    <label>ID do Usuário:</label>
     <input type="number" id="usuario_id" required />
 
-    <label for="categoria_id">ID da Categoria:</label>
+    <label>ID da Categoria:</label>
     <input type="number" id="categoria_id" required />
 
-    <button type="submit">Cadastrar Produto</button>
+    <!-- Campos de foto -->
+    <h3>🖼️ Adicionar até 6 fotos</h3>
+
+    <div id="fotos"></div>
+
+    <button type="submit">Cadastrar Produto e Fotos</button>
   </form>
 
   <div class="msg" id="msg"></div>
 
   <script>
-    function enviarProduto(e) {
-      e.preventDefault();
-
-      const dados = {
-        nome: document.getElementById('nome').value,
-        descricao: document.getElementById('descricao').value,
-        referencia_fabrica: document.getElementById('referencia').value,
-        codigo_barras: document.getElementById('codigo').value,
-        usuario_id: Number(document.getElementById('usuario_id').value),
-        categoria_id: Number(document.getElementById('categoria_id').value),
-        fotos: [] // fotos removidas nesta etapa
-      };
-
-      if (!dados.referencia_fabrica && !dados.codigo_barras) {
-        document.getElementById('msg').innerText =
-          '❌ Informe referência de fábrica ou código de barras.';
-        return;
-      }
-
-      console.log("Dados enviados:", JSON.stringify(dados));
-      fetch('https://fotoload-api.onrender.com/produtos', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(dados)
-      })
-        .then(res => {
-          if (!res.ok) throw new Error(`Erro HTTP: ${res.status}`);
-          return res.json();
-        })
-        .then(resp => {
-          // Salvar produtoId e redirecionar
-          localStorage.setItem('produtoId', resp.id);
-          window.location.href = `/cadastro-foto.html?produtoId=${resp.id}`;
-        })
-        .catch(err => {
-          console.error('Erro ao cadastrar produto:', err);
-          document.getElementById('msg').innerText =
-            '❌ Erro ao cadastrar produto.';
-        });
-    }
-  </script>
-</body>
-</html>
+    // Cria campos de imagem dinamicamente
+    for (let i = 0; i < 6; i++) {
+      const div = document.createElement('div');
+      div.className = 'foto-campo';
+      div.innerHTML = `
+        <label>Foto ${i + 1}:</label>
+        <select name="tipo[${i}]" onchange="alternarEntrada(this, ${i})">
+          <option value="arquivo">Arquivo</option>
+          <option value="url">URL</option>
+        </select>
+        <input type="file" name="arquivo[${i}]" />
+        <input type="text" name="url[${i}]" style="display:none;" placeholder="https://imagem.jpg" />
+        <div id="
