Corrigindo imagem de fallback para usar recurso local

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         produtos.forEach(p => {
           grid.innerHTML += `
             <div class="card">
-              <img src="${p.foto || 'https://via.placeholder.com/250x160'}" alt="Foto de ${p.nome}" />
+              <img src="/imagens/sem-imagem.jpg" />
               <h3>${p.nome}</h3>
               <p>${p.categoria}</p>
               <div class="nota">⭐ ${p.nota_media}</div>
