--- a/index.html
+++ b/index.html
@@ -55,10 +55,13 @@
               const fotoUrl = p.fotos?.[0]?.id
                 ? `/fotos/${p.fotos[0].id}`
                 : '/imagens/sem-imagem.jpg';
-              <h3>${p.nome}</h3>
-              <p>${p.categoria}</p>
-              <div class="nota">⭐ ${p.nota_media}</div>
-            </div>
+              grid.innerHTML += `
+                <div class="card">
+                 <img src="${fotoUrl}" />
+                 <h3>${p.nome}</h3>
+                  <p>${p.categoria}</p>
+                  <div class="nota">⭐ ${p.nota_media}</div>
+              </div>
           `;
         });
         
