--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
   </style>
 </head>
 <body>
+  <div id="menu"></div>
+<script>
+  fetch('menu.html')
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById('menu').innerHTML = html;
+    });
+</script>
   <h1>📸 Produtos em Destaque</h1>
   <div class="grid" id="destaques"></div>
 
