--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         produtos.forEach(p => {
           const fotoUrl = `https://fotoload-api.onrender.com/fotos/${p.foto}`;
           console.log('URL da foto:', fotoUrl);   
+          console.log('Foto recebida:', p.foto);
           grid.innerHTML += `
               <div class="card">
                 <img src="${fotoUrl}" />
