--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       .then(produtos => {
         const grid = document.getElementById('destaques');
         produtos.forEach(p => {
-          const fotoUrl = p.foto || '/imagens/sem-imagem.jpg';
-            grid.innerHTML += `
+          <img src="${fotoUrl}" onerror="this.src='/imagens/sem-imagem.jpg'" />
+           grid.innerHTML += `
             <div class="card">
                 <img src="${fotoUrl}" />
                 <h3>${p.nome}</h3>
