--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <title>Fotoload - Destaques</title>
   <style>
     body {
@@ -40,31 +41,38 @@
   </style>
 </head>
 <body>
+  <div id="menu"></div>
+  <script>
+    fetch('menu.html')
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById('menu').innerHTML = html;
+      });
+  </script>
   <h1>📸 Produtos em Destaque</h1>
   <div class="grid" id="destaques"></div>
 
   <script>
-    //fetch('/produtos/destaques')
     fetch('https://fotoload-api.onrender.com/produtos/destaques')
       .then(res => res.json())
       .then(produtos => {
         const grid = document.getElementById('destaques');
         produtos.forEach(p => {
-          grid.innerHTML += `
+          <img src="${fotoUrl}" onerror="this.src='/imagens/sem-imagem.jpg'" />
+           grid.innerHTML += `
             <div class="card">
-              <img src="/imagens/sem-imagem.jpg" />
-              <h3>${p.nome}</h3>
-              <p>${p.categoria}</p>
-              <div class="nota">⭐ ${p.nota_media}</div>
+                <img src="${fotoUrl}" />
+                <h3>${p.nome}</h3>
+                <p>${p.categoria}</p>
+                <div class="nota">⭐ ${p.nota_media}</div>
             </div>
-          `;
+            `;
         });
-        
       })
       .catch(err => {
         console.error('Erro ao buscar destaques:', err);
         document.getElementById('destaques').innerHTML =
-      '<p>Erro ao carregar os produtos. Verifique o backend.</p>';
+          '<p>Erro ao carregar os produtos. Verifique o backend.</p>';
       });
   </script>
 </body>
