--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
       .then(produtos => {
         const grid = document.getElementById('destaques');
         produtos.forEach(p => {
-          <img src="${fotoUrl}" onerror="this.src='/imagens/sem-imagem.jpg'" />
+        const fotoUrl = p.foto || '/imagens/sem-imagem.jpg';
            grid.innerHTML += `
             <div class="card">
                 <img src="${fotoUrl}" />
