--- a/public/menu.html
+++ b/public/menu.html
@@ -2,7 +2,7 @@
 
 <nav style="background:#333; padding:10px; text-align:center;">
   <a href="index.html" style="color:#fff; margin:0 10px;">🏠 Destaques</a>
-  <a href="cadastro.html" style="color:#fff; margin:0 10px;">📦 Cadastro Produto</a>
-  <a href="fotos.html" style="color:#fff; margin:0 10px;">📷 Enviar Fotos</a>
-  <a href="painel.html" style="color:#fff; margin:0 10px;">👤 Painel Usuário</a>
+  <a href="cadastro-produto.html" style="color:#fff; margin:0 10px;">📦 Cadastro Produto</a>
+  <a href="cadastro-foto.html" style="color:#fff; margin:0 10px;">📷 Enviar Fotos</a>
+  <a href="admin.html" style="color:#fff; margin:0 10px;">👤 Painel Usuário</a>
 </nav>
