--- a/public/admin.html
+++ b/public/admin.html
@@ -29,6 +29,14 @@
   </style>
 </head>
 <body>
+  <div id="menu"></div>
+  <script>
+    fetch('menu.html')
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById('menu').innerHTML = html;
+      });
+  </script>
   <h1>👮 Painel Administrativo</h1>
   <table>
     <thead>
