--- a/public/menu.html
+++ b/public/menu.html
@@ -3,6 +3,6 @@
 <nav style="background:#333; padding:10px; text-align:center;">
   <a href="index.html" style="color:#fff; margin:0 10px;">🏠 Destaques</a>
   <a href="cadastro-produto.html" style="color:#fff; margin:0 10px;">📦 Cadastro Produto</a>
-  <a href="cadastro-foto.html" style="color:#fff; margin:0 10px;">📷 Enviar Fotos</a>
+  <a href="avaliar.html" style="color:#fff; margin:0 10px;">📷 Avaliar</a>
   <a href="admin.html" style="color:#fff; margin:0 10px;">👤 Painel Usuário</a>
 </nav>
