--- a/index.html
+++ b/index.html
@@ -1,59 +1,59 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fotoload - Destaques</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f2f2f2;
-      padding: 20px;
-    }
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-    .grid {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-    }
-    .card {
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 0 10px #ccc;
-      width: 250px;
-      padding: 15px;
-      text-align: center;
-    }
-    .card img {
-      width: 100%;
-      border-radius: 4px;
-    }
-    .nota {
-      font-size: 1.1em;
-      color: #ffa500;
-      margin-top: 5px;
-    }
-  </style>
-</head>
-<body>
-  <h1>📸 Produtos em Destaque</h1>
-  <div class="grid" id="destaques"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fotoload - Destaques</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background: #f2f2f2;
+        padding: 20px;
+      }
+      h1 {
+        text-align: center;
+        color: #333;
+      }
+      .grid {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+        justify-content: center;
+      }
+      .card {
+        background: white;
+        border-radius: 8px;
+        box-shadow: 0 0 10px #ccc;
+        width: 250px;
+        padding: 15px;
+        text-align: center;
+      }
+      .card img {
+        width: 100%;
+        border-radius: 4px;
+      }
+      .nota {
+        font-size: 1.1em;
+        color: #ffa500;
+        margin-top: 5px;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>📸 Produtos em Destaque</h1>
+    <div class="grid" id="destaques"></div>
 
-  <script>
-    fetch('https://fotoload-api.onrender.com/produtos/destaques')
-      .then(res => res.json())
-      .then(produtos => {
-        const grid = document.getElementById('destaques');
-        produtos.forEach(p => {
-          const fotoUrl = p.fotos?.[0]?.id
-            ? `/fotos/${p.fotos[0].id}`
-            : '/imagens/sem-imagem.jpg';
+    <script>
+      fetch('https://fotoload-api.onrender.com/produtos/destaques')
+        .then((res) => res.json())
+        .then((produtos) => {
+          const grid = document.getElementById('destaques');
+          produtos.forEach((p) => {
+            const fotoUrl = p.fotos?.[0]?.id
+              ? `/fotos/${p.fotos[0].id}`
+              : '/imagens/sem-imagem.jpg';
 
-          grid.innerHTML += `
+            grid.innerHTML += `
             <div class="card">
               <img src="${fotoUrl}" />
               <h3>${p.nome}</h3>
@@ -61,13 +61,13 @@
               <div class="nota">⭐ ${p.nota_media}</div>
             </div>
           `;
+          });
+        })
+        .catch((err) => {
+          console.error('Erro ao buscar destaques:', err);
+          document.getElementById('destaques').innerHTML =
+            '<p>Erro ao carregar os produtos. Verifique o backend.</p>';
         });
-      })
-      .catch(err => {
-        console.error('Erro ao buscar destaques:', err);
-        document.getElementById('destaques').innerHTML =
-          '<p>Erro ao carregar os produtos. Verifique o backend.</p>';
-      });
-  </script>
-</body>
+    </script>
+  </body>
 </html>
