--- a/public/avaliar.html
+++ b/public/avaliar.html
@@ -1,109 +1,110 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8" />
-  <title>Avaliar Produto</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #eef2f7;
-      padding: 20px;
-      max-width: 600px;
-      margin: auto;
-    }
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-    form {
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
-    }
-    label {
-      display: block;
-      margin-top: 10px;
-      font-weight: bold;
-    }
-    input, textarea, select {
-      width: 100%;
-      padding: 8px;
-      margin-top: 4px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-    }
-    button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    .msg {
-      margin-top: 15px;
-      text-align: center;
-    }
-  </style>
-</head>
-<body>
-  <h1>📝 Avaliar Produto</h1>
-  <form onsubmit="enviarAvaliacao(event)">
-    <label for="produto_id">ID do Produto:</label>
-    <input type="number" id="produto_id" required />
+  <head>
+    <meta charset="UTF-8" />
+    <title>Avaliar Produto</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        background: #eef2f7;
+        padding: 20px;
+        max-width: 600px;
+        margin: auto;
+      }
+      h1 {
+        text-align: center;
+        color: #333;
+      }
+      form {
+        background: white;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+      }
+      label {
+        display: block;
+        margin-top: 10px;
+        font-weight: bold;
+      }
+      input,
+      textarea,
+      select {
+        width: 100%;
+        padding: 8px;
+        margin-top: 4px;
+        border-radius: 4px;
+        border: 1px solid #ccc;
+      }
+      button {
+        margin-top: 20px;
+        padding: 10px 20px;
+        background: #007bff;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      .msg {
+        margin-top: 15px;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>📝 Avaliar Produto</h1>
+    <form onsubmit="enviarAvaliacao(event)">
+      <label for="produto_id">ID do Produto:</label>
+      <input type="number" id="produto_id" required />
 
-    <label for="usuario_id">Seu ID de Usuário:</label>
-    <input type="number" id="usuario_id" required />
+      <label for="usuario_id">Seu ID de Usuário:</label>
+      <input type="number" id="usuario_id" required />
 
-    <label for="nota">Nota (1 a 100):</label>
-    <input type="number" id="nota" min="1" max="100" required />
+      <label for="nota">Nota (1 a 100):</label>
+      <input type="number" id="nota" min="1" max="100" required />
 
-    <label for="origem">Origem:</label>
-    <select id="origem">
-      <option value="usuario">Usuário</option>
-      <option value="curtida">Curtida</option>
-      <option value="sistema">Sistema</option>
-    </select>
+      <label for="origem">Origem:</label>
+      <select id="origem">
+        <option value="usuario">Usuário</option>
+        <option value="curtida">Curtida</option>
+        <option value="sistema">Sistema</option>
+      </select>
 
-    <label for="comentario">Comentário:</label>
-    <textarea id="comentario" rows="3"></textarea>
+      <label for="comentario">Comentário:</label>
+      <textarea id="comentario" rows="3"></textarea>
 
-    <button type="submit">Enviar Avaliação</button>
-  </form>
+      <button type="submit">Enviar Avaliação</button>
+    </form>
 
-  <div class="msg" id="msg"></div>
+    <div class="msg" id="msg"></div>
 
-  <script>
-    function enviarAvaliacao(e) {
-      e.preventDefault();
+    <script>
+      function enviarAvaliacao(e) {
+        e.preventDefault();
 
-      const dados = {
-        produto_id: Number(document.getElementById('produto_id').value),
-        usuario_id: Number(document.getElementById('usuario_id').value),
-        nota: Number(document.getElementById('nota').value),
-        origem: document.getElementById('origem').value,
-        comentario: document.getElementById('comentario').value
-      };
+        const dados = {
+          produto_id: Number(document.getElementById('produto_id').value),
+          usuario_id: Number(document.getElementById('usuario_id').value),
+          nota: Number(document.getElementById('nota').value),
+          origem: document.getElementById('origem').value,
+          comentario: document.getElementById('comentario').value,
+        };
 
-      fetch('https://fotoload-api.onrender.com/avaliar', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(dados)
-      })
-        .then(res => res.json())
-        .then(resp => {
-          document.getElementById('msg').innerText =
-            resp.nota_atualizada
+        fetch('https://fotoload-api.onrender.com/avaliar', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(dados),
+        })
+          .then((res) => res.json())
+          .then((resp) => {
+            document.getElementById('msg').innerText = resp.nota_atualizada
               ? `Nota atualizada para: ${resp.nota_atualizada}`
               : resp.erro || 'Erro inesperado';
-        })
-        .catch(err => {
-          console.error('Erro ao avaliar:', err);
-          document.getElementById('msg').innerText = 'Erro ao enviar avaliação.';
-        });
-    }
-  </script>
-</body>
+          })
+          .catch((err) => {
+            console.error('Erro ao avaliar:', err);
+            document.getElementById('msg').innerText = 'Erro ao enviar avaliação.';
+          });
+      }
+    </script>
+  </body>
 </html>
