--- a/public/avaliar.html
+++ b/public/avaliar.html
@@ -51,6 +51,14 @@
     </style>
   </head>
   <body>
+    <div id="menu"></div>
+  <script>
+    fetch('menu.html')
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById('menu').innerHTML = html;
+      });
+  </script>
     <h1>📝 Avaliar Produto</h1>
     <form onsubmit="enviarAvaliacao(event)">
       <label for="produto_id">ID do Produto:</label>
