--- a/public/avaliar.html
+++ b/public/avaliar.html
@@ -64,6 +64,7 @@
       <label for="produto_id">ID do Produto:</label>
       <input type="number" id="produto_id" required />
       <label for="usuario_id">Seu ID de Usuário:</label>
+      <input type="number" id="usuario_id" required />
       <label for="nota">Nota (1 a 100):</label>
       <input type="number" id="nota" min="1" max="100" required />
 
