--- a/public/gerenciar-produtos.html
+++ b/public/gerenciar-produtos.html
@@ -1,63 +1,69 @@
-<div class="grid" id="produtos"></div>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Gerenciar Produtos</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+    }
+    input, button {
+      margin: 5px 0;
+      padding: 8px;
+    }
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    li {
+      background: #f0f0f0;
+      margin: 5px 0;
+      padding: 10px;
+      border-radius: 4px;
+    }
+  </style>
+</head>
+<body>
 
-<script>
-function carregarProdutos() {
-  const minNota = document.getElementById('minNota').value;
-  const categoria = document.getElementById('categoria').value;
-  const busca = document.getElementById('busca').value.toLowerCase();
+  <h1>Gerenciar Produtos</h1>
 
-  fetch('https://fotoload-api.onrender.com/produtos/destaques')
-    .then(res => res.json())
-    .then(produtos => {
-      const grid = document.getElementById('produtos');
-      grid.innerHTML = '';
+  <label for="nome">Nome do Produto:</label><br>
+  <input type="text" id="nome" placeholder="Ex: Sabão líquido"><br>
 
-      produtos
-        .filter(p => (!minNota || p.nota_atual >= minNota) &&
-                    (!categoria || p.categoria === categoria) &&
-                    (!busca || p.nome.toLowerCase().includes(busca) ||
-                      (p.codigo_barras && p.codigo_barras.includes(busca))))
-        .forEach(p => {
-          grid.innerHTML += `
-            <div class="card">
-              <img src="${p.fotos && p.fotos.length ? p.fotos[0] : '/imagens/sem-imagem.jpg'}" />
-              <h3>${p.nome}</h3>
-              <p>${p.descricao || 'Sem descrição'}</p>
-              <div class="nota">⭐ ${p.nota_atual || '–'}</div>
-              <button onclick="editarProduto(${p.id})">✏️ Editar</button>
-              <button onclick="excluirProduto(${p.id})">🗑️ Excluir</button>
-            </div>
-          `;
-        });
-    })
-    .catch(err => {
-      console.error('Erro ao buscar produtos:', err);
-      document.getElementById('produtos').innerHTML =
-        '<p>Erro ao carregar os produtos. Verifique a API.</p>';
-    });
-}
+  <button onclick="adicionarProduto()">Adicionar Produto</button>
 
-function editarProduto(id) {
-  alert('Editar produto ' + id);
-  // Aqui você pode abrir um modal com os dados do produto.
-}
+  <h2>Lista de Produtos:</h2>
+  <ul id="lista-produtos"></ul>
 
-function excluirProduto(id) {
-  if (confirm('Tem certeza que deseja excluir o produto?')) {
-    fetch(`https://fotoload-api.onrender.com/produtos/${id}`, {
-      method: 'DELETE'
-    })
-    .then(() => {
-      alert('Produto excluído com sucesso!');
-      carregarProdutos(); // Atualiza a lista
-    })
-    .catch(err => {
-      alert('Erro ao excluir produto.');
-      console.error(err);
-    });
-  }
-}
+  <script>
+    const produtos = [];
 
-// Carrega os produtos ao iniciar
-carregarProdutos();
-</script>
+    function adicionarProduto() {
+      const input = document.getElementById('nome');
+      const nomeProduto = input.value.trim();
+
+      if (nomeProduto === "") {
+        alert("Digite o nome do produto!");
+        return;
+      }
+
+      produtos.push(nomeProduto);
+      input.value = "";
+      atualizarLista();
+    }
+
+    function atualizarLista() {
+      const lista = document.getElementById('lista-produtos');
+      lista.innerHTML = "";
+
+      produtos.forEach((produto, index) => {
+        const item = document.createElement('li');
+        item.textContent = `${index + 1}. ${produto}`;
+        lista.appendChild(item);
+      });
+    }
+  </script>
+
+</body>
+</html>
