ajuste pequeno no HTML

--- a/public/gerenciar-produtos.html
+++ b/public/gerenciar-produtos.html
@@ -25,6 +25,14 @@
   </style>
 </head>
 <body>
+  <div id="menu"></div>
+  <script>
+    fetch('menu.html')
+      .then(res => res.text())
+      .then(html => {
+        document.getElementById('menu').innerHTML = html;
+      });
+  </script>
 
   <h1>Gerenciar Produtos</h1>
 
